--- a/ui.html
+++ b/ui.html
@@ -336,7 +336,7 @@
 <body>
   <div class="container">
     <div style="margin-bottom: 28px;">
-      <label style="font-weight: 500; font-size: 13px; display: block; margin-bottom: 8px;">API Key</label>
+      <label style="font-weight: 500; font-size: 13px; display: block; margin-bottom: 8px;">API key</label>
       <div style="display: flex; gap: 8px; align-items: center;">
         <input type="password" id="apiKey" placeholder="sk-" style="flex: 1; padding: 10px; border-radius: 8px; border: 1px solid #e0e0e0; font-size: 15px;">
       </div>
@@ -558,7 +558,7 @@
       const originalText = status.textContent;
       const originalClass = status.className;
       
-      status.textContent = 'Text updated successfully! 🎉';
+      status.textContent = 'Text updated successfully! 💕';
       status.style.background = '#d4edda';
       status.style.color = '#155724';
       
