--- a/ui.html
+++ b/ui.html
@@ -155,10 +155,10 @@
     }
 
     .variation {
-      background: #f8f8f8;
-      border: none;
+      background: #f5f7fa;
+      border: 1px solid rgba(224, 224, 224, 0.4);
       border-radius: 8px;
-      padding: 18px 20px 16px 20px;
+      padding: 14px;
       margin-bottom: 18px;
       position: static;
       display: flex;
@@ -379,7 +379,7 @@
     <div class="error" id="error"></div>
 
     <div class="results-section" id="results" style="margin-top:32px;">
-      <div style="font-weight:600;font-size:17px;margin-bottom:16px;">Variations</div>
+      <div style="font-weight:600;font-size:15px;margin-bottom:16px;">Variations</div>
       <div id="variations"></div>
     </div>
   </div>
